--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,13 +1,17 @@
 {
-  "name": "binarytime",
+	"name": "binarytime",
 	"image": "mcr.microsoft.com/devcontainers/base:debian",
-  "features": {
+	"features": {
 		"ghcr.io/devcontainers/features/aws-cli:1": "latest",
-		"ghcr.io/devcontainers/features/docker-in-docker:2": {"moby": false},
+		"ghcr.io/devcontainers/features/docker-in-docker:2": {
+			"moby": false
+		},
 		"ghcr.io/devcontainers/features/github-cli": "latest",
 		"ghcr.io/devcontainers/features/go": {},
-		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {"packages": "bash-completion"},
-		"ghcr.io/devcontainers-extra/features/typescript:2": {}
+		"ghcr.io/devcontainers-extra/features/typescript:2": {},
+		"ghcr.io/rocker-org/devcontainer-features/apt-packages:1": {
+			"packages": "bash-completion"
+		}
 	},
 	"containerEnv": {
 		"AWS_PROFILE": "bogie"
